--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <h1>What service do you need?</h1><br>
     <div class="link-to-services">
-      <button onclick="location.href='  '">Specific Unit Converter (SUC)</button>
+      <button onclick="location.href='SUC'">Specific Unit Converter (SUC)</button>
       <button onclick="location.href='  '">Other Is Coming Soon</button>
       <button onclick="location.href='  '">Other Is Coming Soon</button>
       <button onclick="location.href='  '">Other Is Coming Soon</button>
