--- a/SUC.html
+++ b/SUC.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang:"en">
+<html lang="en">
 <head>
  <meta charset="UTF-8">
 <title>Specific Unit Converter</title>
@@ -11,7 +11,7 @@ font-size: 30px;
 body{
 font-family: Times New Roman, Times, serif;
 background-color: dark blue;
-color: white
+color: white;
 }
 </style>
 </head>
