--- a/SUC.html
+++ b/SUC.html
@@ -10,7 +10,7 @@ font-size: 30px;
 }
 body{
 font-family: Times New Roman, Times, serif;
-background-color: dark blue;
+background-color: black;
 color: white;
 }
 </style>
