--- a/SUC.html
+++ b/SUC.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
-<title>Science-hub Specific Unit Converter</title>
+<title>Science hub Specific Unit Converter</title>
 <style>
 h1{
 text-align: center;
