--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h1>What service do you need?</h1><br>
     <div class="link-to-services">
       <button onclick="location.href='SUC.html'">Specific Unit Converter (SUC)</button>
-      <button onclick="location.href='  '">Other Is Coming Soon</button>
+      <button onclick="location.href='moleculareditor.html'">Molecular Editor</button>
       <button onclick="location.href='  '">Other Is Coming Soon</button>
       <button onclick="location.href='  '">Other Is Coming Soon</button>
     </div>
