--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="link-to-services">
       <button onclick="location.href='SUC.html'">Specific Unit Converter (SUC)</button>
       <button onclick="location.href='moleculareditor.html'">Molecular Editor</button>
-      <button onclick="location.href='  '">Other Is Coming Soon</button>
+      <button onclick="location.href='Textmodtool.html'">Editor to pass AI checks</button>
       <button onclick="location.href='  '">Other Is Coming Soon</button>
     </div>
     
