--- a/Textmodtool.html
+++ b/Textmodtool.html
@@ -166,11 +166,11 @@
                 
                 <label for="modificationStrategy">
                     Strategia:
-                    <select id="modificationStrategy">
-                        <option value="advanced" selected>Balanced (Recommended)</option>
+                    <select id="modificationStrategy"> 
+                        <option value="paraphrase">Humanize 100% (To pass AI checks)</option>
                         <option value="synonym">Replacement Synonyms</option>
                         <option value="rephrase">Reformulating Sentences</option>
-                        <option value="paraphrase">Complete paraphrase</option>
+                        <option value="advanced" selected>Balanced (No to pass AI checks)</option>
                     </select>
                 </label>
                 
