--- a/Textmodtool.html
+++ b/Textmodtool.html
@@ -154,7 +154,7 @@
         - Ricontrollare sempre il testo editato e correggere evenutali errori, SPECIALMENTE<br>
           se si decide di deselezionare "Preserve Style" e "Preserve Meaning";<br>
         - Volendo si può controllare che il testo editato risulti umanizzato tramite l'AI detector<br>
-        - in fondo alla pagina (disponibile a breve) o tramite un AI detector Online.
+          in fondo alla pagina (disponibile a breve) o tramite un AI detector Online.
         
         
         </p>
