--- a/Textmodtool.html
+++ b/Textmodtool.html
@@ -138,6 +138,14 @@
             color: #7f8c8d;
             font-size: 14px;
         }
+        img {
+        width: 100%;
+        max-width: 200px;
+        height: auto;
+        border-radius: 10px;
+        display: block;
+        margin: auto;
+      }
     </style>
 </head>
 <body>
@@ -150,7 +158,7 @@
 
         - Selezionare "Humanize 100% (To pass AI checks)";<br>
         - Impostare "Modification Level" a 10;<br>
-        - Per una maggiore modifica deselezionare "Preserve Style" e "Preserve Meaning";<br>
+        - Per una maggiore modifica deselezionare "Preserve Style" e "Preserve Meaning";<br>        <img src="https://github.com/Grandes-webpage/Science-hub.github.io/blob/main/Images/Immagine%20WhatsApp%202025-04-10%20ore%2011.15.07_ba8b5e5c.jpg" alt="Persone che giocano a Bowling"/>
         - Ricontrollare sempre il testo editato e correggere evenutali errori, SPECIALMENTE<br>
           se si decide di deselezionare "Preserve Style" e "Preserve Meaning";<br>
         - Volendo si può controllare che il testo editato risulti umanizzato tramite l'AI detector<br>
