--- a/Textmodtool.html
+++ b/Textmodtool.html
@@ -158,7 +158,7 @@
 
         - Selezionare "Humanize 100% (To pass AI checks)";<br>
         - Impostare "Modification Level" a 10;<br>
-        - Per una maggiore modifica deselezionare "Preserve Style" e "Preserve Meaning";<br>        <img src="https://github.com/Grandes-webpage/Science-hub.github.io/blob/main/Images/Immagine%20WhatsApp%202025-04-10%20ore%2011.15.07_ba8b5e5c.jpg" alt="Persone che giocano a Bowling"/>
+        - Per una maggiore modifica deselezionare "Preserve Style" e "Preserve Meaning";<br>        <img src="Images/Immagine WhatsApp 2025-04-10 ore 11.15.07_ba8b5e5c.jpg" alt="Persone che giocano a Bowling"/>
         - Ricontrollare sempre il testo editato e correggere evenutali errori, SPECIALMENTE<br>
           se si decide di deselezionare "Preserve Style" e "Preserve Meaning";<br>
         - Volendo si può controllare che il testo editato risulti umanizzato tramite l'AI detector<br>
